<resources>
    <string name="app_name">Starter</string>
    <string name="welcome_to_starter">Welcome to Starter</string>
    <string name="talk_to_interesting_people">Talk to interesting people</string>
    <string name="welcome">Get Started</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="customize_your_interests">Customize your interests</string>
    <string name="just_to_give_you_the_best_experience">Just to give you the best experience</string>
    <string name="chat_with_awesome_people">Chat with awesome people</string>
    <string name="our_ai_find_the_best_people_that_share_your_interests">Our AI find the best people that share your interests</string>
    <string name="get_more">Get more!</string>
    <string name="liked_your_match_save_in_your_starter_case_of_cool_people">Liked your match? save in your starter case of cool people</string>
    <string name="find_people_that_share_your_interest">Find people that share your interest</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="continue_with_email">Continue with email</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="terms_of_services_and_privacy_policy">By creating new account, your agree to our <u>Terms Of Services</u> &amp; <u>Privacy Policy</u></string>
    <string name="name">Name</string>
    <string name="re_password">Re-Password</string>
    <string name="register">Register</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="select_photo">You can select photo from one of this emoji or add your own photo profile picture</string>
    <string name="continue_text">Continue</string>
    <string name="add_custom_photo">Add Custom Photo</string>
    <string name="choose_gender">Choose gender</string>
    <string name="just_to_help_us">Just to help us know a bit more and to give you a better experience</string>
    <string name="you_are">You are?</string>
    <string name="chat_with">Chat with?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="both_genders">Both genders</string>
    <string name="clear_all">Clear all</string>
    <string name="done_thanks_text">Thanks for taking your time to create account with us. Now this is the fun part, let\'s explore the app.</string>
    <string name="you_are_ready_to_go">You are ready to go!</string>
    <string name="get_started">Get Started</string>
    <string name="done">Done!</string>
    <string name="my_profile">My Profile</string>

</resources>
