<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".activities.LoginActivity">

        <ImageView
            android:layout_width="@dimen/size_48dp"
            android:layout_height="@dimen/size_48dp"
            android:layout_marginTop="@dimen/size_32dp"
            android:src="@drawable/starter_icon" />

        <TextView
            android:id="@+id/main_fragment_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_32dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:layout_marginEnd="@dimen/size_32dp"
            android:gravity="center"
            android:maxEms="8"
            android:text="@string/find_people_that_share_your_interest"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_32sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_32dp"
            android:layout_marginTop="@dimen/size_32dp"
            android:layout_marginEnd="@dimen/size_32dp"
            android:hint="@string/email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_32dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:layout_marginEnd="@dimen/size_32dp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_32dp"
            android:layout_marginTop="@dimen/size_32dp"
            android:layout_marginEnd="@dimen/size_32dp"
            android:background="@drawable/purple_gradient_background"
            android:text="@string/continue_with_email"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:text="@string/continue_as_guest"
            android:textColor="@color/light_purple"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_64dp"
            android:text="@string/or_sign_in_with"
            android:textColor="@android:color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_32dp"
            android:layout_marginEnd="@dimen/size_16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_32dp"
        android:gravity="center_horizontal"
        android:maxEms="16"
        android:text="@string/terms_of_services_and_privacy_policy"
        android:textColor="@android:color/black" />

</RelativeLayout>
