<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/get_started_activity_icon"
        android:layout_width="@dimen/size_48dp"
        android:layout_height="@dimen/size_48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_32dp"
        android:src="@drawable/starter_icon" />

    <TextView
        android:id="@+id/main_fragment_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_started_activity_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_16dp"
        android:gravity="center"
        android:text="@string/welcome_to_starter"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/main_fragment_sub_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_fragment_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_12dp"
        android:gravity="center"
        android:text="@string/talk_to_interesting_people"
        android:textColor="@color/bluey_grey"
        android:textSize="@dimen/text_16sp" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/get_started_activity_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/get_started_activity_page_indicator"
        android:layout_below="@+id/main_fragment_sub_title_text"
        android:layout_marginTop="@dimen/size_32dp"
        android:layout_marginBottom="@dimen/size_32dp" />

    <com.rd.PageIndicatorView
        android:id="@+id/get_started_activity_page_indicator"
        android:layout_width="wrap_content"
        app:piv_animationType="scale"
        android:layout_centerHorizontal="true"
        app:piv_selectedColor="@color/light_purple"
        app:piv_unselectedColor="@color/light_gray"
        app:piv_viewPager="@id/get_started_activity_view_pager"
        android:layout_height="wrap_content"
        android:layout_above="@+id/get_started_activity_button"
        android:layout_marginBottom="@dimen/size_32dp" />

    <Button
        android:id="@+id/get_started_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/get_started_activity_bottom_text_layout"
        android:layout_margin="@dimen/size_24dp"
        android:background="@drawable/purple_gradient_background"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/get_started_activity_bottom_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/size_16dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/main_fragment_already_have_acc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_have_account"
            android:textColor="@color/bluey_grey"
            android:textSize="@dimen/text_16sp" />

        <TextView
            android:id="@+id/main_fragment_sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_12dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/light_purple"
            android:textSize="@dimen/text_16sp" />

    </LinearLayout>


</RelativeLayout>