<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfilePictureFragment">

    <TextView
        android:id="@+id/profile_fragment_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16dp"
        android:text="@string/profile_picture"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_fragment_sub_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_48dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_48dp"
        android:gravity="center_horizontal"
        android:text="@string/select_photo"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_fragment_title_text_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_fragment_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_fragment_sub_title_text_view" />

    <TextView
        android:id="@+id/create_profile_add_custom_photo_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_48dp"
        android:layout_marginTop="@dimen/size_32dp"
        android:layout_marginEnd="@dimen/size_48dp"
        android:gravity="center_horizontal"
        android:text="@string/add_custom_photo"
        android:textColor="@color/light_purple"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_fragment_recycler_view" />

</androidx.constraintlayout.widget.ConstraintLayout>