<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_background">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        tools:context=".activities.DoneActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_gravity="center">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_animation_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="explode.json"
                app:lottie_loop="true" />

            <!--<ImageView
                android:layout_width="280dp"
                android:layout_height="180dp"
                android:adjustViewBounds="true"
                android:background="@drawable/done_bubbles"
                android:scaleType="fitCenter" />-->

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/white_circle_background" />

            <ImageView
                android:layout_width="@dimen/size_48dp"
                android:layout_height="@dimen/size_48dp"
                android:layout_centerInParent="true"
                android:background="@drawable/starter_icon" />


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_32dp"
            android:gravity="center"
            android:text="@string/you_are_ready_to_go"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_24sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_64dp"
            android:layout_marginEnd="@dimen/size_64dp"
            android:gravity="center"
            android:lineHeight="@dimen/size_24dp"
            android:text="@string/done_thanks_text"
            android:textColor="@color/light_gray" />


    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_32dp"
        android:background="@drawable/white_gradient_background"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/light_purple" />
</RelativeLayout>